--- a/www/css/index.css
+++ b/www/css/index.css
@@ -6,7 +6,7 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#fff;
+    background-color:#F0E68C;
     background-attachment:fixed;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
     font-size:12px;
@@ -21,21 +21,21 @@ body {
 .toolbar--material__center {
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
     font-weight: 500;
-    color: #fff!important;
+    color: #F0E68C!important;
 }
 .back-button--material__icon {
-    fill: #fff!important;
+    fill: #F0E68C!important;
 }
 .button--material {
     background-color: #333!important;
-    color: #fff!important;
+    color: #F0E68C!important;
 }
 ons-fab.fab--material{
     background-color: #333!important;
-    color: #fff!important;
+    color: #F0E68C!important;
 }
 .page--material__background {
-    background-color: #fff!important;
+    background-color: #F0E68C!important;
 }
 .tabbar--material__border {
     background-color: #333!important;
@@ -48,4 +48,18 @@ ons-fab.fab--material{
 }
 .modal__content {
     font-size: 30px!important;
+}
+
+.titulo_menu {
+    font-weight: bold;
+    text-align: center;
+    color: #fff;
+}
+
+.titulo_menu i{
+    font-size: 25px;
+}
+
+.card--material {
+    background-color: #FFD700;
 }
