--- a/www/css/index.css
+++ b/www/css/index.css
@@ -6,7 +6,7 @@ body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
-    background-color:#F0E68C;
+    background-color:#F5F5F5;
     background-attachment:fixed;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
     font-size:12px;
@@ -21,21 +21,21 @@ body {
 .toolbar--material__center {
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
     font-weight: 500;
-    color: #F0E68C!important;
+    color: #F5F5F5!important;
 }
 .back-button--material__icon {
-    fill: #F0E68C!important;
+    fill: #F5F5F5!important;
 }
 .button--material {
     background-color: #333!important;
-    color: #F0E68C!important;
+    color: #F5F5F5!important;
 }
 ons-fab.fab--material{
     background-color: #333!important;
-    color: #F0E68C!important;
+    color: #F5F5F5!important;
 }
 .page--material__background {
-    background-color: #F0E68C!important;
+    background-color: #F5F5F5!important;
 }
 .tabbar--material__border {
     background-color: #333!important;
@@ -53,7 +53,7 @@ ons-fab.fab--material{
 .titulo_menu {
     font-weight: bold;
     text-align: center;
-    color: #fff;
+    color: #F5F5F5;
 }
 
 .titulo_menu i{
@@ -61,5 +61,6 @@ ons-fab.fab--material{
 }
 
 .card--material {
-    background-color: #FFD700;
+    background-color: #00008B;
+    border-radius: 20px;
 }
