--- a/www/css/index.css
+++ b/www/css/index.css
@@ -73,3 +73,7 @@ ons-fab.compartilhar, ons-fab.copiar {
     color: #F5F5F5!important;
     opacity: 1!important;
 }
+:checked + .switch__toggle {
+    box-shadow: inset 0 0 0 2px #333!important;
+    background-color: #333!important;
+}
