--- a/www/css/index.css
+++ b/www/css/index.css
@@ -1,6 +1,18 @@
 * {
     -webkit-tap-highlight-color: rgba(0,0,0,0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
 }
+@font-face {
+  font-family: Montserrat-Bold;
+  src: url(./fonts/Montserrat/Montserrat-Bold.ttf);
+}
+@font-face {
+  font-family: Montserrat-Regular;
+  src: url(./fonts/Montserrat/Montserrat-Regular.ttf);
+}
+@font-face {
+  font-family: Montserrat-Light;
+  src: url(./fonts/Montserrat/Montserrat-Light.ttf);
+}
 
 body {
     -webkit-touch-callout: none;                /* prevent callout to copy image, etc when tap to hold */
@@ -8,7 +20,7 @@ body {
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     background-color:#F5F5F5;
     background-attachment:fixed;
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
+    font-family:'Montserrat-Regular', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
     font-size:12px;
     height:100%;
     margin:0px;
@@ -19,9 +31,12 @@ body {
     background-color: #333!important;
 }
 .toolbar--material__center {
-    font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
+    font-family:'Montserrat-Regular', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
     font-weight: 500;
     color: #F5F5F5!important;
+}
+p {
+    font-family:'Montserrat-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
 }
 .back-button--material__icon {
     fill: #F5F5F5!important;
@@ -66,6 +81,7 @@ ons-fab.fab--material{
     border-radius: 20px;
 }
 .list-item--material__center {
+    font-family:'Montserrat-Regular', 'HelveticaNeue', Helvetica, Arial, sans-serif!important;
     padding: 0 10px!important;
 }
 ons-fab.compartilhar, ons-fab.copiar {
